--- a/pages/day15.html
+++ b/pages/day15.html
@@ -1,18 +1,322 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 15</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 15</h1>
+      <h1>Día 15</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 15 se añadirá más adelante.</p>
+      <!-- 1. Flexión lateral isométrica del cuello (resistencia en sentido contrario) -->
+      <section>
+        <h2>
+          1. Flexión lateral isométrica del cuello (resistencia en sentido
+          contrario)
+        </h2>
+        <img
+          src="../img/day15/1.1.jpg"
+          alt="Isometría lateral del cuello con la mano bloqueando y la cabeza intentando ir al lado contrario"
+        />
+        <img
+          src="../img/day15/1.2.jpg"
+          alt="Variación de isometría lateral del cuello con resistencia de la mano"
+        />
+        <p>
+          De pie, espalda recta. Coloca la palma en la parte superior-lateral de
+          la cabeza. Ahora intenta inclinar la cabeza hacia el
+          <strong>lado contrario</strong> de la mano, mientras la mano bloquea
+          por completo el movimiento. No debe haber desplazamiento visible.
+          Respira tranquilo.
+        </p>
+        <p>
+          Mantén <strong>10 segundos</strong> y realiza
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 2. (Pendiente) -->
+      <section>
+        <h2>2. (Pendiente)</h2>
+        <p>Contenido por añadir.</p>
+      </section>
+
+      <!-- 3. (Pendiente) -->
+      <section>
+        <h2>3. (Pendiente)</h2>
+        <p>Contenido por añadir.</p>
+      </section>
+
+      <!-- 4. Isometría diagonal del cuello con apoyo de una mano -->
+      <section>
+        <h2>4. Isometría diagonal del cuello con apoyo de una mano</h2>
+        <img
+          src="../img/day15/4.1.jpg"
+          alt="Isometría diagonal del cuello con la mano en la zona frontal-lateral de la cabeza"
+        />
+        <p>
+          Inclina ligeramente la cabeza hacia adelante y gírala un poco hacia el
+          lado de la mano que ofrece la resistencia. Coloca la palma sobre la
+          parte frontal-lateral de la cabeza. Desde esta posición intenta
+          inclinar y girar la cabeza aún más en esa misma dirección, mientras la
+          mano bloquea por completo el movimiento. No debe haber desplazamiento
+          visible.
+        </p>
+        <p>
+          Mantén <strong>10 segundos</strong> y realiza
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 5. Rodar una pelota con la barbilla -->
+      <section>
+        <h2>5. Rodar una pelota con la barbilla</h2>
+        <img
+          src="../img/day15/5.1.jpg"
+          alt="A cuatro apoyos rodando una pelota o calcetín enrollado con la barbilla"
+        />
+        <p>
+          Ponte a cuatro apoyos. Usa una pelota pequeña (mejor de tenis) o un
+          calcetín bien enrollado. Con la barbilla empieza a
+          <strong>rodar</strong> el objeto por el suelo hacia adelante. El
+          objetivo es rodar, no empujar. Hazlo controlado.
+        </p>
+        <p>
+          Mantén aproximadamente <strong>10 segundos</strong> y repite
+          <strong>10 veces</strong>.
+        </p>
+      </section>
+
+      <!-- 6. Isometría de extensión del cuello hacia atrás -->
+      <section>
+        <h2>6. Isometría de extensión del cuello hacia atrás</h2>
+        <img
+          src="../img/day15/6.1.jpg"
+          alt="Manos en la parte posterior de la cabeza creando resistencia para extensión del cuello"
+        />
+        <img
+          src="../img/day15/6.2.jpg"
+          alt="Variación de isometría de extensión del cuello con resistencia de las manos"
+        />
+        <p>
+          Colócate de pie. Coloca ambas palmas sobre la parte posterior de la
+          cabeza. Lleva ligeramente la cabeza hacia atrás, sin echarla
+          completamente. Desde esta posición intenta extender el cuello hacia
+          atrás, mientras las manos bloquean por completo el movimiento.
+        </p>
+        <p>
+          No debe haber desplazamiento visible: toda la tensión es interna. El
+          trabajo principal se siente en la parte posterior del cuello. Mantén
+          los hombros relajados y el torso estable.
+        </p>
+        <p>Realiza <strong>10 segundos × 10 repeticiones</strong>.</p>
+      </section>
+
+      <!-- 7. Extensión profunda de cuello y mandíbula desde rodillas -->
+      <section>
+        <h2>7. Extensión profunda de cuello y mandíbula desde rodillas</h2>
+        <img
+          src="../img/day15/7.1.jpg"
+          alt="Extensión de cuello desde rodillas con manos sujetando los talones"
+        />
+        <img
+          src="../img/day15/7.2.jpg"
+          alt="Mantener la extensión de cuello y pecho abierto desde rodillas"
+        />
+        <img
+          src="../img/day15/7.3.jpg"
+          alt="Variación en la extensión desde rodillas con control de la postura"
+        />
+        <p>
+          Arrodíllate y siéntate sobre los pies (si es difícil, puedes apoyar
+          los dedos de los pies). Lleva el torso hacia atrás, sujeta los talones
+          con las manos y deja la cabeza hacia atrás de forma controlada.
+        </p>
+        <p>
+          En esta postura, <strong>abre y cierra la boca 10 veces</strong>
+          (amplio y controlado, sin tirones). Luego vuelve despacio hacia
+          adelante, pega la barbilla al pecho y
+          <strong>mantén 10 segundos</strong>.
+        </p>
+        <p>
+          Esto cuenta como <strong>1 repetición</strong>. Realiza
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 8. Desgarro isométrico de la toalla en tres posiciones -->
+      <section>
+        <h2>8. Desgarro isométrico de la toalla en tres posiciones</h2>
+        <img
+          src="../img/day15/8.1.jpg"
+          alt="Desgarro isométrico de toalla con brazos al frente"
+        />
+        <img
+          src="../img/day15/8.2.jpg"
+          alt="Desgarro isométrico de toalla por encima de la cabeza"
+        />
+        <img
+          src="../img/day15/8.3.jpg"
+          alt="Desgarro isométrico de toalla detrás del cuerpo"
+        />
+        <p>
+          Toma una toalla (o tela resistente) y mantenla tensa con ambas manos.
+          El objetivo es intentar romperla aplicando máxima fuerza, sin que haya
+          movimiento visible.
+        </p>
+        <p>
+          Realiza el desgarro en <strong>tres posiciones</strong>: <br />1) al
+          frente del pecho, <br />2) por encima de la cabeza, <br />3) abajo,
+          delante de los muslos (o detrás del cuerpo, según tu variante).
+        </p>
+        <p>
+          En cada posición mantén <strong>10 segundos</strong> y haz
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 9. Isometría de flexión de muñeca con resistencia de la otra mano -->
+      <section>
+        <h2>
+          9. Isometría de flexión de muñeca con resistencia de la otra mano
+        </h2>
+        <img
+          src="../img/day15/9.1.jpg"
+          alt="Isometría de flexión de muñeca bloqueada por la otra mano"
+        />
+        <p>
+          Colócate en una posición estable. Con una mano sujeta la muñeca de la
+          otra. La muñeca de trabajo intenta flexionarse hacia abajo, mientras
+          la otra mano bloquea completamente el movimiento, creando una
+          resistencia isométrica fuerte.
+        </p>
+        <p>
+          Mantén la tensión <strong>10 segundos</strong> y realiza
+          <strong>10 repeticiones por cada mano</strong>.
+        </p>
+      </section>
+
+      <!-- 10. Bíceps isométrico con brazo casi extendido hacia abajo -->
+      <section>
+        <h2>10. Bíceps isométrico con brazo casi extendido hacia abajo</h2>
+        <img
+          src="../img/day15/10.1.jpg"
+          alt="Bíceps isométrico con el brazo casi extendido y la otra mano ofreciendo resistencia"
+        />
+        <p>
+          Baja el brazo de trabajo casi completamente extendido, dejando un
+          pequeño ángulo en el codo. La palma mira hacia arriba. Con la otra
+          mano sujeta la muñeca/antebrazo y tira hacia abajo, mientras el brazo
+          de trabajo intenta flexionarse hacia arriba (como un curl), pero el
+          movimiento queda bloqueado.
+        </p>
+        <p>
+          Hazlo suave y controlado. Mantén un conteo lento de
+          <strong>10</strong>. Realiza
+          <strong>10 repeticiones por cada brazo</strong>.
+        </p>
+      </section>
+
+      <!-- 11. Contracción isométrica del bíceps (sin movimiento) -->
+      <section>
+        <h2>11. Contracción isométrica del bíceps (sin movimiento)</h2>
+        <img
+          src="../img/day15/11.1.jpg"
+          alt="Contracción isométrica máxima del bíceps en pose estática"
+        />
+        <img
+          src="../img/day15/11.2.jpg"
+          alt="Contracción isométrica del bíceps en pose estática desde otro ángulo"
+        />
+        <img
+          src="../img/day15/11.3.jpg"
+          alt="Pose estática del bíceps y espalda (solo referencia visual)"
+        />
+        <p>
+          Colócate de pie. Flexiona el brazo y contrae el bíceps al máximo, como
+          en una contracción completa del músculo. El hombro permanece abajo, el
+          cuerpo estable y el cuello relajado.
+        </p>
+        <p>
+          El objetivo es crear una tensión isométrica máxima en el bíceps, sin
+          balanceos, sin cambios de posición y sin movimiento visible.
+        </p>
+        <p>
+          Mantén la tensión <strong>10 segundos</strong> y realiza
+          <strong>10 repeticiones por cada brazo</strong>.
+        </p>
+      </section>
+
+      <!-- 12. Flexiones profundas y lentas -->
+      <section>
+        <h2>12. Flexiones profundas y lentas</h2>
+        <img
+          src="../img/day15/12.1.jpg"
+          alt="Flexiones profundas y lentas en posición de plancha"
+        />
+        <p>
+          Adopta la posición de plancha con el cuerpo alineado desde la cabeza
+          hasta los pies. Desciende lentamente, de forma controlada, hasta que
+          el pecho quede lo más cerca posible del suelo.
+        </p>
+        <p>
+          Luego empuja el cuerpo hacia arriba con la misma lentitud, sin arquear
+          la zona lumbar ni elevar la cadera. Todo el movimiento se realiza bajo
+          control total, sin impulsos.
+        </p>
+        <p>Realiza <strong>10 repeticiones</strong>.</p>
+      </section>
+
+      <!-- 13. Flexiones con pausas isométricas -->
+      <section>
+        <h2>13. Flexiones con pausas isométricas</h2>
+        <img
+          src="../img/day15/13.1.jpg"
+          alt="Flexiones con pausas isométricas en la posición baja y alta"
+        />
+        <p>
+          Adopta la posición de plancha, manteniendo el cuerpo alineado.
+          Desciende a la posición baja de la flexión y mantén durante
+          <strong>10 segundos</strong>.
+        </p>
+        <p>
+          Luego, en <strong>2 segundos</strong>, sube de forma controlada a la
+          posición alta y vuelve a mantener <strong>10 segundos</strong>.
+        </p>
+        <p>
+          El ciclo posición baja → posición alta cuenta como una repetición.
+          Realiza <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 14. Repetición de la contracción isométrica del bíceps -->
+      <section>
+        <h2>14. Repetición de la contracción isométrica del bíceps</h2>
+        <p>Repite el ejercicio <strong>nº 11</strong> sin ningún cambio.</p>
+        <p>
+          Mantén la tensión <strong>10 segundos</strong> y realiza
+          <strong>10 repeticiones por cada brazo</strong>.
+        </p>
+      </section>
+
+      <!-- 15. Repetición de la isometría de flexión de muñeca -->
+      <section>
+        <h2>15. Repetición de la isometría de flexión de muñeca</h2>
+        <img
+          src="../img/day15/15.1.jpg"
+          alt="Repetición de la isometría de flexión de muñeca con resistencia"
+        />
+        <p>Repite el ejercicio <strong>nº 9</strong> sin ningún cambio.</p>
+        <p>
+          Mantén la tensión <strong>10 segundos</strong> y realiza
+          <strong>10 repeticiones por cada mano</strong>.
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
