--- a/pages/day16.html
+++ b/pages/day16.html
@@ -1,18 +1,297 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 16</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 16</h1>
+      <h1>Día 16</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 16 se añadirá más adelante.</p>
+      <!-- 1. Colgamiento parcial con apoyo en los pies -->
+      <section>
+        <h2>1. Colgamiento parcial con apoyo en los pies</h2>
+        <img
+          src="../img/day16/1.1.jpg"
+          alt="Colgamiento parcial en barra con apoyo de los pies"
+        />
+        <p>
+          Agarra una barra o cualquier soporte sólido que no pueda romperse. No
+          cuelgues todo tu peso como en una dominada: deja parte del peso sobre
+          los pies para mantener un estiramiento seguro y controlado. Relaja los
+          hombros y permite que la columna se alargue de forma natural; si es
+          posible, inclina ligeramente la pelvis hacia adelante para mejorar la
+          descompresión de la espalda. Mantén la posición durante
+          <strong>10 segundos</strong> y repite <strong>10 veces</strong>.
+        </p>
+      </section>
+
+      <!-- 2. “Coco” entre las escápulas -->
+      <section>
+        <h2>2. “Coco” entre las escápulas</h2>
+        <img
+          src="../img/day16/2.1.jpg"
+          alt="Isometría juntando escápulas con manos entrelazadas detrás"
+        />
+        <p>
+          Ponte de pie, con los pies al ancho de la pelvis. Lleva ambos brazos
+          por detrás del cuerpo y <strong>entrelaza los dedos</strong> a la
+          altura de la zona lumbar o ligeramente más arriba. Los
+          <strong>codos se dirigen hacia atrás y un poco hacia fuera</strong>,
+          el pecho se abre, los <strong>hombros descienden</strong> y no se
+          elevan hacia las orejas.
+        </p>
+        <p>
+          Imagina que entre las escápulas hay un <strong>coco</strong> que debes
+          <strong>aplastar con fuerza</strong>. El trabajo principal se realiza
+          al <strong>juntar las escápulas</strong>, creando una contracción
+          intensa en la parte media de la espalda. La zona lumbar
+          <strong>no se arquea en exceso</strong>, el torso permanece estable y
+          vertical.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> Mantén la contracción máxima durante
+          <strong>10 segundos</strong>. Realiza
+          <strong>10 repeticiones</strong>. La respiración es tranquila, sin
+          bloqueos.
+        </p>
+      </section>
+
+      <!-- 3. Isometría del dorsal ancho con tracción del brazo -->
+      <section>
+        <h2>3. Isometría del dorsal ancho con tracción del brazo</h2>
+        <img
+          src="../img/day16/3.1.jpg"
+          alt="Isometría del dorsal ancho tirando del brazo hacia abajo"
+        />
+        <p>
+          Colócate de pie. Sujeta una mano con la otra y
+          <strong>tira del brazo hacia abajo</strong>, mientras al mismo tiempo
+          <strong>resistes ese movimiento</strong> con el músculo situado
+          <strong>debajo de la escápula (dorsal ancho)</strong>. El objetivo no
+          es mover el brazo, sino <strong>crear una oposición interna</strong>:
+          el brazo quiere bajar, y el dorsal ancho se contrae para impedirlo. El
+          torso permanece estable, sin balanceos ni inclinaciones.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> Mantén la tensión
+          <strong>10 segundos</strong>. Realiza
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 4. Hiperextensión isométrica en el suelo -->
+      <section>
+        <h2>4. Hiperextensión isométrica en el suelo</h2>
+        <img
+          src="../img/day16/4.1.jpg"
+          alt="Hiperextensión en el suelo elevando torso y piernas"
+        />
+        <p>
+          Acuéstate boca abajo en el suelo. Coloca las manos detrás de la
+          cabeza, <strong>sin tirar del cuello</strong>. Las piernas están
+          <strong>estiradas y activas</strong>. Desde esta posición
+          <strong>eleva simultáneamente el pecho y las piernas</strong>, creando
+          una contracción fuerte de la zona lumbar, los glúteos y la parte
+          posterior del cuerpo. El abdomen permanece ligeramente activo para
+          estabilizar la postura.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> Mantén la posición
+          <strong>10 segundos</strong>. Realiza
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 5. Elevación frontal isométrica con silla en posición de “silla” -->
+      <section>
+        <h2>
+          5. Elevación frontal isométrica con silla en posición de “silla”
+        </h2>
+        <img
+          src="../img/day16/5.1.jpg"
+          alt="Sostener una silla al frente con brazos extendidos"
+        />
+        <img
+          src="../img/day16/5.2.jpg"
+          alt="Sostener una silla al frente en posición de sentadilla tipo silla"
+        />
+        <img
+          src="../img/day16/5.3.jpg"
+          alt="Sostener una silla al frente con el cuerpo estable"
+        />
+        <p>
+          Sujeta una silla por las patas y
+          <strong>extiende los brazos completamente al frente</strong>, a la
+          altura del pecho o ligeramente por encima, manteniéndolos rectos sin
+          bloquear los codos. El torso permanece firme, el pecho abierto y los
+          hombros <strong>abajo</strong>, sin encogerse.
+        </p>
+        <p>
+          Adopta la posición de <strong>“silla”</strong>: flexiona las rodillas
+          hasta un ángulo cercano a 90 grados, como si te sentaras en una silla
+          invisible. La <strong>espalda permanece totalmente recta</strong>, sin
+          inclinarse hacia adelante. Desde esta postura mantén la silla al
+          frente creando una tensión fuerte en hombros, brazos y zona media del
+          cuerpo.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> Mantén la posición
+          <strong>10 segundos</strong>. Realiza
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 6. Tríceps isométrico con el brazo a 90 grados -->
+      <section>
+        <h2>6. Tríceps isométrico con el brazo a 90 grados</h2>
+        <img
+          src="../img/day16/6.1.jpg"
+          alt="Isometría de tríceps con el brazo a 90 grados y resistencia de la otra mano"
+        />
+        <p>
+          Flexiona el brazo de trabajo formando un ángulo de unos
+          <strong>90 grados</strong> y colócalo por encima de la mano de apoyo.
+          La mano inferior actúa como punto fijo y empuja hacia arriba, mientras
+          que el brazo de trabajo intenta
+          <strong>extenderse hacia abajo</strong>, activando intensamente el
+          tríceps.
+        </p>
+        <p>
+          Mantén la tensión máxima unos segundos y repite
+          <strong>10 veces por cada brazo</strong>.
+        </p>
+      </section>
+
+      <!-- 7. Isometría cruzada del hombro y escápula -->
+      <section>
+        <h2>7. Isometría cruzada del hombro y escápula</h2>
+        <img
+          src="../img/day16/7.1.jpg"
+          alt="Isometría cruzada del hombro abrazando el codo o antebrazo"
+        />
+        <p>
+          Cruza el brazo de trabajo frente al cuerpo y
+          <strong>abrázalo por el codo o el antebrazo</strong> con la otra mano.
+          El brazo de trabajo intenta
+          <strong>llevar el codo hacia atrás y hacia afuera</strong> mientras la
+          mano que abraza <strong>no le deja moverse</strong>. Se crea una
+          <strong>isometría intensa</strong> en la <strong>escápula</strong>, el
+          <strong>deltoide posterior</strong> y la
+          <strong>parte alta de la espalda</strong>.
+        </p>
+        <p>
+          Mantén la tensión unos segundos y repite hasta completar
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 8. Fondos con piernas elevadas en superficie paralela -->
+      <section>
+        <h2>8. Fondos con piernas elevadas en superficie paralela</h2>
+        <img
+          src="../img/day16/8.1.jpg"
+          alt="Fondos entre soportes con piernas extendidas al frente"
+        />
+        <p>
+          Colócate entre dos taburetes, barras paralelas o cualquier soporte
+          firme que permita apoyar las manos a los lados del cuerpo. Extiende
+          las piernas al frente y rectas, manteniendo el cuerpo en una línea
+          rígida. Desde esta posición baja el cuerpo flexionando los codos hacia
+          atrás, sin dejar que los hombros colapsen, y luego empuja hacia arriba
+          hasta volver a la posición inicial sin bloquear los codos.
+        </p>
+        <p>
+          El movimiento es corto, controlado y muy tenso, con una fuerte
+          activación del tríceps, deltoides y pecho inferior. Realiza
+          <strong>10 repeticiones</strong>, manteniendo las piernas elevadas
+          durante todo el ejercicio.
+        </p>
+      </section>
+
+      <!-- 9. Rotación interna del hombro con toalla -->
+      <section>
+        <h2>9. Rotación interna del hombro con toalla</h2>
+        <img
+          src="../img/day16/9.1.jpg"
+          alt="Estiramiento con toalla detrás de la espalda y brazos en posiciones opuestas"
+        />
+        <p>
+          Toma una toalla o cinturón que <strong>no se estire</strong> y pásalo
+          detrás de la espalda, con un brazo arriba detrás de la cabeza y el
+          otro abajo cerca de la cintura. Tira en direcciones opuestas creando
+          tensión debajo del omóplato. Mantén la tensión
+          <strong>10 segundos</strong> y descansa <strong>5 segundos</strong>.
+          Repite <strong>10 veces</strong>
+          alternando la posición de los brazos.
+        </p>
+      </section>
+
+      <!-- 10. Tríceps isométrico con el brazo a 90 grados (repetición) -->
+      <section>
+        <h2>10. Tríceps isométrico con el brazo a 90 grados</h2>
+        <img
+          src="../img/day16/10.1.jpg"
+          alt="Repetición de isometría de tríceps con resistencia de la otra mano"
+        />
+        <p>
+          Flexiona el brazo de trabajo formando un ángulo de unos
+          <strong>90 grados</strong> y colócalo por encima de la mano de apoyo.
+          La mano inferior actúa como punto fijo y empuja hacia arriba, mientras
+          que el brazo de trabajo intenta
+          <strong>extenderse hacia abajo</strong>, activando intensamente el
+          tríceps. Mantén la tensión máxima unos segundos y repite
+          <strong>10 veces por cada brazo</strong>.
+        </p>
+      </section>
+
+      <!-- 11. Fondos en banco para tríceps con pausa -->
+      <section>
+        <h2>11. Fondos en banco para tríceps con pausa</h2>
+        <img
+          src="../img/day16/11.1.jpg"
+          alt="Fondos en banco para tríceps con piernas extendidas"
+        />
+        <img
+          src="../img/day16/11.2.jpg"
+          alt="Posición alta del fondo en banco con tensión mantenida"
+        />
+        <p>
+          Con las manos en el borde de un banco y las piernas extendidas al
+          frente, baja flexionando los codos y luego sube sin bloquearlos por
+          completo. En la parte alta mantén la tensión durante
+          <strong>10 segundos</strong>, con los codos ligeramente doblados.
+          Repite <strong>10 veces</strong>
+          controlando hombros y pecho.
+        </p>
+      </section>
+
+      <!-- 12. Isometría lateral para el dorsal ancho -->
+      <section>
+        <h2>12. Isometría lateral para el dorsal ancho</h2>
+        <img
+          src="../img/day16/12.1.jpg"
+          alt="Isometría lateral del dorsal ancho con manos detrás de la cabeza"
+        />
+        <p>
+          Coloca las manos detrás de la cabeza con los codos bien abiertos.
+          Inclina el torso ligeramente hacia un lado sin girar las caderas ni el
+          pecho. Desde esta postura contrae con fuerza el dorsal ancho del lado
+          hacia el que te inclinas, mientras el lado contrario se estira de
+          forma natural.
+        </p>
+        <p>
+          Mantén la contracción unos segundos buscando el máximo acortamiento
+          muscular sin perder la verticalidad general del cuerpo. Vuelve al
+          centro y repite hacia el otro lado hasta completar
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
