--- a/pages/day17.html
+++ b/pages/day17.html
@@ -1,18 +1,230 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 17</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 17</h1>
+      <h1>Día 17</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 17 se añadirá más adelante.</p>
+      <!-- 1. Extensiones isométricas de pierna hacia atrás para glúteo -->
+      <section>
+        <h2>1. Extensiones isométricas de pierna hacia atrás para glúteo</h2>
+        <img
+          src="../img/day17/1.1.jpg"
+          alt="Extensión isométrica de pierna hacia atrás para activar el glúteo"
+        />
+        <p>
+          Ponte de pie, mantén la espalda completamente recta y evita inclinarte
+          hacia adelante. Lleva una pierna recta hacia atrás y crea la máxima
+          tensión posible en el glúteo. Mantén la contracción durante
+          <strong>10 segundos</strong>, vuelve a la posición inicial y cambia de
+          pierna. Realiza <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 2. Zancadas con pausa isométrica -->
+      <section>
+        <h2>2. Zancadas con pausa isométrica</h2>
+        <img
+          src="../img/day17/2.1.jpg"
+          alt="Zancada con la rodilla trasera cerca del suelo"
+        />
+        <p>
+          Da un paso amplio hacia adelante y baja a una zancada, llevando la
+          rodilla trasera casi hasta el suelo. El torso permanece vertical y la
+          rodilla delantera mira estrictamente hacia adelante, sin colapsar
+          hacia dentro.
+        </p>
+        <p>
+          En la posición baja congela el movimiento y mantén una tensión fuerte
+          durante <strong>10 segundos</strong>, respirando de forma tranquila y
+          controlada. Después sube con control, cambia de pierna y repite. Haz
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 3. Elevación isométrica de pierna recta al frente (90°) -->
+      <section>
+        <h2>3. Elevación isométrica de pierna recta al frente (90°)</h2>
+        <img
+          src="../img/day17/3.1.jpg"
+          alt="Pierna recta elevada al frente cerca de 90 grados"
+        />
+        <p>
+          Ponte de pie con la espalda recta y el abdomen firme. Eleva una pierna
+          recta al frente hasta aproximarte a un ángulo de <strong>90°</strong>
+          con el cuerpo (o lo más alto que puedas sin encorvarte). Mantén la
+          pierna lo más estirada posible y con el pie activo. Sostén la posición
+          <strong>10 segundos</strong>, baja con control y repite. Realiza
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 4. Rodilla al pecho de pie (isométrico) -->
+      <section>
+        <h2>4. Rodilla al pecho de pie (isométrico)</h2>
+        <img
+          src="../img/day17/4.1.jpg"
+          alt="Rodilla al pecho de pie con manos sujetando la pierna"
+        />
+        <p>
+          Ponte de pie con la espalda recta y el abdomen firme. Eleva una
+          rodilla hacia el pecho y abrázala con ambas manos (por debajo de la
+          rodilla o sobre la tibia), acercándola lo máximo posible sin encorvar
+          la espalda. Mantén la presión y la tensión
+          <strong>10 segundos</strong>, baja con control y cambia de pierna.
+          Realiza <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 5. Extensión hacia atrás de pie (apertura de pecho) -->
+      <section>
+        <h2>5. Extensión hacia atrás de pie (apertura de pecho)</h2>
+        <img
+          src="../img/day17/5.1.jpg"
+          alt="Extensión hacia atrás de pie con manos en la cintura"
+        />
+        <p>
+          Ponte de pie con los pies a la anchura de los hombros. Coloca las
+          manos en la cintura o sobre la parte alta de las caderas para dar
+          soporte. Aprieta ligeramente el abdomen y los glúteos para estabilizar
+          la zona lumbar. Lleva el pecho hacia arriba y atrás, abre los hombros
+          y mira hacia el techo, sin “romper” la cintura ni sentir dolor. Mantén
+          la posición <strong>10 segundos</strong>, vuelve al centro con control
+          y repite. Realiza <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 6. Masaje abdominal en apnea (vacío abdominal) -->
+      <section>
+        <h2>6. Masaje abdominal en apnea (vacío abdominal)</h2>
+        <img
+          src="../img/day17/6.1.jpg"
+          alt="Posición inclinada con manos en las rodillas para vacío abdominal"
+        />
+        <img
+          src="../img/day17/6.2.jpg"
+          alt="Activación del abdomen en apnea para masaje abdominal"
+        />
+        <p>
+          Apoya las palmas sobre las rodillas e inclina el torso hacia delante.
+          Exhala por completo, mete el abdomen al máximo “debajo de las
+          costillas” y eleva las costillas, manteniendo la respiración en pausa.
+          Sin inhalar, empieza a soltar el abdomen hacia abajo (inflándolo lo
+          más posible) y vuelve a meterlo hacia dentro.
+        </p>
+        <p>
+          Haz estas ondas tantas veces como puedas en una sola apnea. La próxima
+          vez intenta hacer <strong>una repetición más</strong>.
+        </p>
+      </section>
+
+      <!-- 7. Respiración diafragmática con piernas elevadas -->
+      <section>
+        <h2>7. Respiración diafragmática con piernas elevadas</h2>
+        <img
+          src="../img/day17/7.1.jpg"
+          alt="Respiración diafragmática acostado con piernas elevadas"
+        />
+        <p>
+          Túmbate boca arriba y apoya las piernas en la pared con una ligera
+          inclinación, de modo que la espalda y la zona lumbar queden relajadas
+          sobre el suelo. Suelta completamente el abdomen y deja que se vuelva
+          blando.
+        </p>
+        <p>
+          Respira solo con el diafragma: al inhalar, el vientre sube; al
+          exhalar, baja de forma natural sin esfuerzo. Mantén esta respiración
+          durante
+          <strong>1–2 minutos</strong>, hasta que se vuelva profunda y estable.
+        </p>
+      </section>
+
+      <!-- 8. Crunch con piernas elevadas -->
+      <section>
+        <h2>8. Crunch con piernas elevadas</h2>
+        <img
+          src="../img/day17/8.1.jpg"
+          alt="Crunch con piernas elevadas apoyadas y torso subiendo"
+        />
+        <p>
+          Túmbate boca arriba y eleva las piernas (en la versión clásica:
+          rodillas flexionadas y tobillos cruzados). Haz el crunch como uno
+          normal: despega solo hombros y parte alta de la espalda del suelo, sin
+          tirar del cuello. Exhala al subir e inhala al bajar. Realiza
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 9. Crunch clásico (piernas abajo) -->
+      <section>
+        <h2>9. Crunch clásico (piernas abajo)</h2>
+        <img
+          src="../img/day17/9.1.jpg"
+          alt="Posición inicial del crunch con pies apoyados"
+        />
+        <img
+          src="../img/day17/9.2.jpg"
+          alt="Posición alta del crunch con hombros elevados"
+        />
+        <p>
+          Túmbate boca arriba con las rodillas flexionadas y los pies apoyados
+          en el suelo (o en la pared, como en la imagen). Sube el torso
+          despegando solo hombros y parte alta de la espalda, sin tirar del
+          cuello. Exhala al subir (un exhalo por cada repetición) e inhala al
+          bajar. Haz
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 10. Isometría lateral para el dorsal ancho -->
+      <section>
+        <h2>10. Isometría lateral para el dorsal ancho</h2>
+        <img
+          src="../img/day17/10.1.jpg"
+          alt="Isometría lateral del dorsal ancho con manos detrás de la cabeza"
+        />
+        <p>
+          Coloca las manos detrás de la cabeza con los codos bien abiertos.
+          Inclina el torso ligeramente hacia un lado sin girar las caderas ni el
+          pecho. Desde esta postura contrae con fuerza el dorsal ancho del lado
+          hacia el que te inclinas, mientras el lado contrario se estira de
+          forma natural.
+        </p>
+        <p>
+          Mantén la contracción unos segundos buscando el máximo acortamiento
+          muscular sin perder la verticalidad general del cuerpo. Vuelve al
+          centro y repite hacia el otro lado hasta completar
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 11. Fondos en banco para tríceps con pausa -->
+      <section>
+        <h2>11. Fondos en banco para tríceps con pausa</h2>
+        <img
+          src="../img/day17/11.1.jpg"
+          alt="Fondos en banco para tríceps con piernas extendidas"
+        />
+        <img
+          src="../img/day17/11.2.jpg"
+          alt="Posición alta del fondo en banco con tensión mantenida"
+        />
+        <p>
+          Con las manos en el borde de un banco y las piernas extendidas al
+          frente, baja flexionando los codos y luego sube sin bloquearlos por
+          completo. En la parte alta mantén la tensión durante
+          <strong>10 segundos</strong>, con los codos ligeramente doblados.
+          Repite <strong>10 veces</strong> controlando hombros y pecho.
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
